# repo-requirements-analyzer

./: .env.example  .env.secret-workflow.example  .gitignore  .mcp.json  Makefile  README.md  opencode.json  pyproject.toml
.mcp-node/: package-lock.json  package.json
src/repo_requirements_analyzer/: __init__.py  code_agent.py  ingest.py  main.py  quality.py  report_parser.py  scan.py  secret_sanitization_workflow.py  secrets_scan.py  storage.py  webapp.py
